--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/index.jsx"></script>
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   </body>
 </html>
